automated random spawn using reflection completed